TerraForm Lab1/sg.tf
# Create Security Group for SSH Access from Anywhere open to all
resource "aws_security_group" "public_ssh" {
  name_prefix = "public_ssh"
  description = "Allow SSH Access from Anywhere"
  vpc_id      = aws_vpc.my_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }  
}

# Create Security Group for SSH and Port 3000 from VPC CIDR
resource "aws_security_group" "private_ssh_3000" {
  name_prefix = "private_ssh_3000"
  description = "Allow SSH and Port 3000 from VPC CIDR"
  vpc_id      = aws_vpc.my_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.my_vpc.cidr_block]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.my_vpc.cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }  
}
